// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package-json-lint declares the package-json-lint terra-cli command with proper command level help 1`] = `
"terra package-json-lint

Lint the package.json file(s) in the current package

Options:
  --version  Show version number                                       [boolean]
  --help     Show help                                                 [boolean]"
`;

exports[`package-json-lint declares the package-json-lint terra-cli command with proper top level help 1`] = `
"terra [command]

Commands:
  terra package-json-lint  Lint the package.json file(s) in the current package

Options:
  --version  Show version number                                       [boolean]
  --help     Show help                                                 [boolean]"
`;
